# VectorSearchEngine

./: CMakeLists.txt  README.md
docs/: 架构设计.md  项目详细模块划分说明.txt
include/VectorSearchEngine/: MemoryPool.h  VectorIndex.h  VectorMath.h  VectorStorage.h
src/: MemoryPool.cpp  VectorIndex.cpp  VectorMath.cpp  VectorStorage.cpp  main.cpp
tests/: test_main.cpp
